# mqttberry

./: Makefile  README.md  docker-compose.yaml
frontend/: index.html  index.js
grafana/: Dockerfile
influxdb/: Dockerfile  init-influxdb.sh
mosquitto/: Dockerfile  mosquitto.conf
mqtt/: pyproject.toml
mqtt/mqtt/: publish.py  subscribe.py  websocket.py
mqtt2influx/: Dockerfile  mqtt_influx.py
